--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Quick few lines of code to demonstrate how you can pass data to a liquid template. See `demo_controller.rb`.
 
-Things you may want to cover:
+Tweak the markup in the textarea, and submit to rerender.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+`rails s`, then visit the home page.
